package interfaces;

public interface ControleMidia {

    void buscarDispositivo();

    void mostrarMidiaEmReproducao();

    void mostrarMidiaGeral();
}
